load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rsslack_lib",
    srcs = ["main.go"],
    importpath = "github.com/ubio/github-actions/actions/rsslack",
    visibility = ["//visibility:private"],
    deps = ["@com_github_nlopes_slack//:go_default_library"],
)

go_binary(
    name = "rsslack",
    embed = [":rsslack_lib"],
    visibility = ["//visibility:public"],
)
