load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "webhook_lib",
    srcs = ["main.go"],
    importpath = "github.com/ubio/github-actions/actions/webhook",
    visibility = ["//visibility:private"],
    deps = ["@com_github_kelseyhightower_envconfig//:go_default_library"],
)

go_binary(
    name = "webhook",
    embed = [":webhook_lib"],
    visibility = ["//visibility:public"],
)
